--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,6 +8,7 @@ services:
     build: 
       context: .
       dockerfile: Dockerfile
+    image: chillytaka/php7.4-oracle
     tty: true
     ports:
       - "8080:80"
